# hisi-flash-algorithm

./: CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
ws63/: Cargo.toml  README.md
ws63/src/: main.rs
