[package]
name = "ws63-flash-algorithm"
edition = "2021"
version = "0.2.0"
publish = false
description = "probe-rs flash loader for the HiSilicon WS63 (Hi3863) SFC NOR flash"

[dependencies]
# riscv32-capable; provides the panic handler + the PrgCode/PrgData linker script.
# erase-chip disabled: probe-rs erases sector-by-sector, so we don't implement erase_all.
flash-algorithm = { version = "0.7", default-features = false, features = ["panic-handler"] }

[[bin]]
name = "ws63-flash-algorithm"
test = false
bench = false

# [profile.release] lives in the workspace root Cargo.toml — Cargo ignores
# profiles declared in non-root workspace members.
